--- a/mensaje-enviado.html
+++ b/mensaje-enviado.html
@@ -16,8 +16,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-    <!-- bxSlider CSS file -->
-    <link href="css/jquery.bxslider.css" rel="stylesheet" />
+    <!-- Remove bxSlider CSS includes. -->
     <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400,500,700" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
